# llm-wiki-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  runtime-config.example.yaml
app/: __init__.py  config.py  database.py  index_tasks.py  main.py  runtime_main.py
docs/: ._ingest-compile-pipeline.html  agent-tool-runtime.html  chat-and-agent-runtime.html  config-and-admin-settings.html  core-data-models.html  engine-runtime-overview.html  feedback-repair-loop.html  index.html  ingest-compile-pipeline.html  knowledge-graph-generation.html  project-disk-layout.html  search-and-retrieval.html
hooks/: sync-repositories.bat  sync-repositories.py  sync-repositories.sh
scripts/: build-runtime-bundle.bat  build-runtime-bundle.sh  build-runtime.bat  build-runtime.sh
tests/: test_admin_config_backup.py  test_agent_conversations.py  test_agent_project_binding.py  test_agent_skill_refs.py  test_agent_skill_router.py  test_agent_skill_tokens.py  test_api_base.py  test_auth_api_tokens.py  test_case_index_builder.py  test_case_index_parser.py  test_case_index_search.py  test_case_index_tools.py  test_context_compress.py  test_database_sqlite.py  test_embedding_rebuild.py  test_enqueue_tasks.py  test_external_url.py  test_feedback_compiler.py  test_feedback_evaluator.py  test_feedback_models.py  test_feedback_publish.py  test_git_sync.py  test_ingest_checkpoint_rollback.py  test_ingest_files.py  test_ingest_knowledge_tool.py  test_ingest_pause.py  test_knowledge_fast_lookup.py  (+15 more)
(+105 files in other folders)
