[project]
name = "llm-wiki-engine"
version = "0.1.0"
description = "Compile-time knowledge synthesis engine with multi-project API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.17",
    "aiofiles>=24.1.0",
    "pyyaml>=6.0.2",
    "litellm>=1.55.0",
    "lancedb>=0.17.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "rank-bm25>=0.2.2",
    "pymupdf>=1.25.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    "httpx>=0.28.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "pyinstaller>=6.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
